Fixed summary/diagram overlap

--- a/src/widgets/CompareViewer.css
+++ b/src/widgets/CompareViewer.css
@@ -1,6 +1,6 @@
 @import "../utilities/Styles.css";
 
-#Diagram-viewer {
+#Compare-viewer {
   position: relative;
   display: flex;
   flex-direction: column;
@@ -15,43 +15,13 @@
   transition: width 0.3s ease;
 }
 
-#content {
-  position: relative;
-  align-items: top;
-  height: 100%;
-  width: 100%;
-  overflow: hidden;
-}
-
-#summary-box {
-  z-index: 2;
-  border-bottom: var(--small_dim) solid var(--c_hilight);
-}
-
-#summary {
+#compare-summary {
   margin: 0;
   padding: var(--small_dim);
   font-size: var(--sub_font);
-  border-bottom: var(--small_dim) solid var(--c_hilight);
+  border-bottom: var(--c_highlight) solid var(--small_dim) !important;
 }
 
 #explain {
   font-size: var(--h2_font);
-}
-
-#diagram-container {
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0; 
-  right: 0;
-  overflow: auto;
-}
-
-#mermaid-container {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
 }
