--- a/src/widgets/DiagramViewer.css
+++ b/src/widgets/DiagramViewer.css
@@ -47,24 +47,11 @@
   100% { transform: rotate(360deg); }
 }
 
-#content {
-  position: relative;
-  align-items: top;
-  height: 100%;
-  width: 100%;
-  overflow: hidden;
-}
-
-#summary-box {
-  z-index: 2;
-  border-bottom: var(--small_dim) solid var(--c_hilight);
-}
-
 #summary {
   margin: 0;
   padding: var(--small_dim);
   font-size: var(--sub_font);
-  border-bottom: var(--small_dim) solid var(--c_hilight);
+  border-bottom: var(--c_highlight) solid var(--small_dim) !important;
 }
 
 #diagram-options {
@@ -94,21 +81,4 @@
 #diagram-options img {
   height: var(--small_button);
   width: var(--small_button);
-}
-
-#diagram-container {
-  position: absolute;
-  justify-content: center;
-  left: 0;
-  bottom: 0; 
-  right: 0;
-}
-
-#mermaid-container {
-  position: absolute;
-  align-items: center;
-  bottom: var(--large_dim);
-  left: 0;
-  width: 100%;
-  height: 100%;
 }
